[tool.poetry]
name = "gym-management-system"
version = "0.1.0"
description = ""
authors = ["Grzetan <grzetan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
